--- a/kb/communities/Chromobacterium_Gold_Biocyanidation.yaml
+++ b/kb/communities/Chromobacterium_Gold_Biocyanidation.yaml
@@ -27,6 +27,20 @@ description: >
 ecological_state: ENGINEERED
 community_origin: ENGINEERED
 community_category: BIOTECHNOLOGY
+engineering_design:
+  objective: An engineered bioplatform utilizing the purple pigmented bacterium Chromobacterium violaceum for sustainable gold extraction from refractory ores and electronic waste through biological cyanide production (biocyanidation).
+  assembly_strategy: Engineered single-member platform represented in community schema for interoperability with multi-member systems.
+  measurement_endpoints:
+  - Interaction-level mechanistic characterization
+  - Member-level abundance and persistence tracking
+  notes: Backfilled engineering-design metadata from existing curation; refine with protocol-level parameters when available.
+  perturbation_design: 'Designed condition space included: pH, Temperature.'
+  evidence:
+  - reference: doi:10.1016/j.mineng.2013.03.022
+    supports: SUPPORT
+    evidence_source: IN_VITRO
+    snippet: Chromobacterium violaceum produces and detoxifies small amounts of cyanide from simple carbon sources
+    explanation: Establishes biogenic cyanide production mechanism
 
 environment_term:
   preferred_term: mine tailing
